sql/src/test/resources/drill/window/queries/negative/q1.res
0\t
VALIDATION ERROR
.*ROW/RANGE not allowed with RANK, DENSE_RANK or ROW_NUMBER functions
